# Note

./: CMakeLists.txt  CMakeSettings.json
3rdPart/boost_1_83_0/lib/: libboost_atomic-vc220-mt-gd-x32-1_83.lib  libboost_atomic-vc220-mt-gd-x64-1_83.lib  libboost_atomic-vc220-mt-s-x32-1_83.lib  libboost_atomic-vc220-mt-s-x64-1_83.lib  libboost_atomic-vc220-mt-sgd-x32-1_83.lib  libboost_atomic-vc220-mt-sgd-x64-1_83.lib  libboost_atomic-vc220-mt-x32-1_83.lib  libboost_atomic-vc220-mt-x64-1_83.lib  libboost_chrono-vc220-mt-gd-x32-1_83.lib  libboost_chrono-vc220-mt-gd-x64-1_83.lib  libboost_chrono-vc220-mt-s-x32-1_83.lib  libboost_chrono-vc220-mt-s-x64-1_83.lib  libboost_chrono-vc220-mt-sgd-x32-1_83.lib  libboost_chrono-vc220-mt-sgd-x64-1_83.lib  libboost_chrono-vc220-mt-x32-1_83.lib  libboost_chrono-vc220-mt-x64-1_83.lib  libboost_container-vc220-mt-gd-x32-1_83.lib  libboost_container-vc220-mt-gd-x64-1_83.lib  libboost_container-vc220-mt-s-x32-1_83.lib  libboost_container-vc220-mt-s-x64-1_83.lib  libboost_container-vc220-mt-sgd-x32-1_83.lib  libboost_container-vc220-mt-sgd-x64-1_83.lib  libboost_container-vc220-mt-x32-1_83.lib  libboost_container-vc220-mt-x64-1_83.lib  libboost_context-vc220-mt-gd-x32-1_83.lib  libboost_context-vc220-mt-gd-x64-1_83.lib  libboost_context-vc220-mt-s-x32-1_83.lib  libboost_context-vc220-mt-s-x64-1_83.lib  libboost_context-vc220-mt-sgd-x32-1_83.lib  libboost_context-vc220-mt-sgd-x64-1_83.lib  libboost_context-vc220-mt-x32-1_83.lib  libboost_context-vc220-mt-x64-1_83.lib  libboost_contract-vc220-mt-gd-x32-1_83.lib  libboost_contract-vc220-mt-gd-x64-1_83.lib  libboost_contract-vc220-mt-s-x32-1_83.lib  libboost_contract-vc220-mt-s-x64-1_83.lib  libboost_contract-vc220-mt-sgd-x32-1_83.lib  libboost_contract-vc220-mt-sgd-x64-1_83.lib  libboost_contract-vc220-mt-x32-1_83.lib  libboost_contract-vc220-mt-x64-1_83.lib  (+177 more)
3rdPart/boost_1_83_0/lib/cmake/boost_atomic-1.83.0/: boost_atomic-config.cmake  libboost_atomic-variant-vc220-mt-gd-x32-1_83-static.cmake  libboost_atomic-variant-vc220-mt-gd-x64-1_83-static.cmake  libboost_atomic-variant-vc220-mt-s-x32-1_83-static.cmake  libboost_atomic-variant-vc220-mt-s-x64-1_83-static.cmake  libboost_atomic-variant-vc220-mt-sgd-x32-1_83-static.cmake  libboost_atomic-variant-vc220-mt-sgd-x64-1_83-static.cmake  libboost_atomic-variant-vc220-mt-x32-1_83-static.cmake  libboost_atomic-variant-vc220-mt-x64-1_83-static.cmake
3rdPart/boost_1_83_0/lib/cmake/boost_chrono-1.83.0/: boost_chrono-config.cmake  libboost_chrono-variant-vc220-mt-gd-x32-1_83-static.cmake  libboost_chrono-variant-vc220-mt-gd-x64-1_83-static.cmake  libboost_chrono-variant-vc220-mt-s-x32-1_83-static.cmake  libboost_chrono-variant-vc220-mt-s-x64-1_83-static.cmake  libboost_chrono-variant-vc220-mt-sgd-x32-1_83-static.cmake  libboost_chrono-variant-vc220-mt-sgd-x64-1_83-static.cmake  (+2 more)
Src/: editor.cpp  editor.h  main.cpp  mainwindow.cpp  mainwindow.h
(+337 files in other folders)
